@@ -1,0 +1,9 @@
+package rbasamoyai.createbigcannons.remix;
+
+import net.minecraft.core.BlockPos;
+
+public interface CustomBlockDamageDisplay {
+
+	void createbigcannons$trackCustomProgress(BlockPos pos, int damage);
+
+}
