@@ -152,6 +152,7 @@ Fixed:
 - Fixed autocannon tracer rendering intersecting with barrel
 - Fixed intersection loading occurring when disabled by using pistons and pulleys
 - Fixed cooldown loading involving rapidly disassembling quick-fire big cannons and autocannons
+- Fixed partial block damage display
 
 ===
 
